# git-ftp-desktopapp

./: .git-ftp-ignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: release.yml
docs/: release-packaging.md
scripts/: prepare-git-ftp.sh  prepare-lftp-unix.sh  prepare-lftp-windows.sh  run-tauri.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: lftp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diagnostics.rs  executables.rs  git.rs  git_ftp.rs  lib.rs  main.rs  models.rs  process.rs  profiles.rs  secrets.rs  state.rs
src/components/: ActionPanel.tsx  ConnectionBootstrapPanel.tsx  DiagnosticsView.tsx  LogPanel.tsx  ProfileForm.tsx  RepoSidebar.tsx  ToastViewport.tsx
src/lib/: tauri.ts  utils.ts
src/store/: appStore.ts
