[package]
name = "git-ftp-desktop"
version = "0.1.0"
description = "Cross-platform desktop GUI for the user-installed git-ftp CLI."
authors = ["Dinis Correia <https://github.com/dinisjcorreia>"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "git_ftp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
which = "8"
